--- a/.github/workflows/build-go.yaml
+++ b/.github/workflows/build-go.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: setup
         run: |
           go version
-          go get github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+          go get github.com/golangci/golangci-lint/cmd/golangci-lint@v1.39.0
 
       - name: build
         run: |
